fix: align Total label in cart-item desc. (#14200)

--- a/projects/storefrontstyles/scss/components/cart/_cart-item.scss
+++ b/projects/storefrontstyles/scss/components/cart/_cart-item.scss
@@ -133,14 +133,16 @@
     justify-content: flex-end;
     align-items: center;
     margin-bottom: 0;
-    text-align: end;
 
     @include media-breakpoint-down(sm) {
       justify-content: flex-start;
     }
 
-    .cx-value {
-      word-break: break-word;
+    @include forVersion(4.2) {
+      .cx-value {
+        text-align: end;
+        word-break: break-word;
+      }
     }
   }
 
